--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
     <meta name="twitter:title" content="Chicken Road 2 in Pakistan: Secrets to Success and Game Review by InOut!">
     <meta name="twitter:description" content="Discover the secrets to success in Chicken Road 2 InOut Game in Pakistan! Compare, choose, and win in Islamabad and Lahore. Start playing now!">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EV8P96FKL1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-EV8P96FKL1');
+    </script>
+        
     <!-- Schema.org -->
     <script type="application/ld+json">
     {
