--- a/index.html
+++ b/index.html
@@ -1055,11 +1055,11 @@
     <!-- Header -->
     <header style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://pbs.twimg.com/media/Guwu0CkWIAAk8HI.png') center/cover;">
         <div class="container header-content">
-            <h1>Chicken Road 2 InOut Game: Your Choice in Pakistan</h1>
+            <h1 style="color: white;">Chicken Road 2 InOut Game: Your Choice in Pakistan</h1>
             <p>Discover the secrets to success in Chicken Road 2 InOut Game in Pakistan! Compare, choose and explore whether this popular earning game is real or fake. Start playing now!</p>
             <div class="header-buttons">
-                <a href="#" class="btn btn-primary">Download Now</a>
-                <a href="#" class="btn btn-secondary">Try Demo Version</a>
+                <a href="/play" class="btn btn-primary">Download Now</a>
+                <a href="/play" class="btn btn-secondary">Try Demo Version</a>
             </div>
         </div>
     </header>
