--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
                                 <h3>Chicken Road Lite Review</h3>
                                 <p>Chicken Road Lite stands out with its user-friendly interface and more than 4,000 tasks from reliable providers. A generous welcome bonus of 250% and 100 free games makes the platform one of the most attractive and easy to use for beginners in India in 2025. The Magical Rewards program, with weekly cashback and exclusive tournaments, increases engagement and makes the gaming experience even more profitable.</p>
 
-                                <div class="expert-opinion">
+                                <div id="reviews" class="expert-opinion">
                                     <div class="expert-header">
                                         <div class="expert-photo">
                                             <img src="/1.jpg" alt="Yusuf Khan" width="80" height="80">
@@ -1191,12 +1191,12 @@
                             </div>
                             <div class="card-body">
                                 <ol>
-                                    <li><strong>Try the demo:</strong> Launch Chicken Road 2 in demo mode to evaluate the mechanics and see if the game is right for you.</li>
+                                    <li><strong><a href="/play">Try the demo</a>:</strong> Launch Chicken Road 2 in demo mode to evaluate the mechanics and see if the game is right for you.</li>
                                     <li><strong>Compare games:</strong> Use our Chicken Road comparison to see the key differences between the various versions.</li>
                                     <li><strong>Consider pricing plans:</strong> The Chicken Road InOut Games platform offers several plans — compare their features and bonuses to choose the best one.</li>
                                     <li><strong>Check device compatibility:</strong> Ensure the game runs smoothly on your smartphone/tablet or computer.</li>
                                     <li><strong>Read user reviews:</strong> Read real player reviews and expert opinions to make a more informed choice.</li>
-                                    <li><strong>Start playing and get a big bonus:</strong> Download the APK or go to the official Chicken Road website and pave your way to glory!</li>
+                                    <li><strong><a href="/play">Start playing and get a big bonus</a>:</strong> Download the APK or go to the official Chicken Road website and pave your way to glory!</li>
                                 </ol>
                             </div>
                         </div>
@@ -1343,8 +1343,8 @@ After a one-time registration, you only need to follow a few steps:</p>
                 <div class="sidebar">
                     <div class="sidebar-widget fade-in delay-1">
                         <h3>Download Now</h3>
-                        <a href="#" class="download-btn">Download Chicken Road 2</a>
-                        <a href="#" class="download-btn" style="background: var(--secondary);">Try Demo Version</a>
+                        <a href="/play" class="download-btn">Download Chicken Road 2</a>
+                        <a href="/play" class="download-btn" style="background: var(--secondary);">Try Demo Version</a>
                     </div>
                     
                     <div class="sidebar-widget fade-in delay-2">
